--- a/PyCitySchools/PyCitySchoolsAnalysis.ipynb
+++ b/PyCitySchools/PyCitySchoolsAnalysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "15"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "39170"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,29 +223,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(24649428)"
+       "24649428"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total budget\n",
-    "total_budget = school_data[\"budget\"].sum()\n",
+    "total_budget = sum(school_data[\"budget\"])\n",
     "total_budget\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "np.float64(78.98537145774827)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "np.float64(74.9808526933878)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
     }
    ],
    "source": [
-    "# Calculate the percentage of students who passed reading (hint: look at how the math percentage was calculated)\n",
+    "# Calculate the percentage of students who passed reading\n",
     "passing_reading_count = school_data_complete[(school_data_complete[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
     "passing_reading_percentage = passing_reading_count / student_count * 100\n",
     "passing_reading_percentage\n"
@@ -2412,15 +2412,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3377404583.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3377404583.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  spending_math_scores = school_spending_df.groupby([\"Spending Ranges (Per Student)\"])[\"Average Math Score\"].mean()\n",
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3377404583.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3377404583.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  spending_reading_scores = school_spending_df.groupby([\"Spending Ranges (Per Student)\"])[\"Average Reading Score\"].mean()\n",
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3377404583.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3377404583.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  spending_passing_math = school_spending_df.groupby([\"Spending Ranges (Per Student)\"])[\"% Passing Math\"].mean()\n",
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3377404583.py:5: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3377404583.py:5: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  spending_passing_reading = school_spending_df.groupby([\"Spending Ranges (Per Student)\"])[\"% Passing Reading\"].mean()\n",
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3377404583.py:6: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3377404583.py:6: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  overall_passing_spending = school_spending_df.groupby([\"Spending Ranges (Per Student)\"])[\"% Overall Passing\"].mean()\n"
      ]
     }
@@ -2753,15 +2753,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3452950842.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3452950842.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  size_math_scores = size_summary_df.groupby([\"School Size\"])[\"Average Math Score\"].mean()\n",
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3452950842.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3452950842.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  size_reading_scores = size_summary_df.groupby([\"School Size\"])[\"Average Reading Score\"].mean()\n",
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3452950842.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3452950842.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  size_passing_math = size_summary_df.groupby([\"School Size\"])[\"% Passing Math\"].mean()\n",
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3452950842.py:5: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3452950842.py:5: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  size_passing_reading = size_summary_df.groupby([\"School Size\"])[\"% Passing Reading\"].mean()\n",
-      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73183/3452950842.py:6: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/mf/mrrt4z2s5lz7_4_6jplhpdlr0000gn/T/ipykernel_73886/3452950842.py:6: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  size_overall_passing = size_summary_df.groupby([\"School Size\"])[\"% Overall Passing\"].mean()\n"
      ]
     }
